<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="se.kth.dogtracker.TrackStatsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.25">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/rounded_corners"

                    android:tint="@color/theme_700"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/stats_dog"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_centerInParent="true"

                    android:src="@drawable/empty_profile_picture"/>
            </RelativeLayout>
            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="vertical">
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/stats_name"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/default_name"
                    android:gravity="bottom|start"

                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="20sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/stats_datetime"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="top|start"

                    android:text="@string/default_name"
                    android:textColor="@color/text_grey"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </LinearLayout>

        <com.mapbox.maps.MapView
            android:id="@+id/mapView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_weight="3"
            android:layout_marginVertical="5dp"/>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:orientation="horizontal">
                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance_title"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/stats_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    />
                </androidx.appcompat.widget.LinearLayoutCompat>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_title"
                        android:textSize="15sp"/>
                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/stats_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"

                        android:text=""
                        android:textSize="30sp"
                        android:textColor="@color/black"
                        />
                </LinearLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:gravity="center"
            android:orientation="horizontal"
            android:background="@drawable/layout_borders"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dumbbells_found"
                    android:textSize="15sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/stats_dbs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/average_speed"
                    android:textSize="15sp"/>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/avg_speed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text=""
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.constraintlayout.widget.ConstraintLayout>