<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="16dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    android:stateListAnimator="@null"
    android:elevation="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_profile_bg"
            android:layout_width="110dp"
            android:layout_height="110dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/rounded_corners"
            android:tint="@color/theme_500"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_profile_picture"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:layout_constraintStart_toStartOf="@id/image_profile_bg"
            app:layout_constraintTop_toTopOf="@id/image_profile_bg"
            app:layout_constraintBottom_toBottomOf="@id/image_profile_bg"
            app:layout_constraintEnd_toEndOf="@id/image_profile_bg"
            android:scaleType="centerCrop"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_profile_camera"
            android:layout_width="35dp"
            android:layout_height="35dp"
            app:layout_constraintEnd_toEndOf="@id/image_profile_picture"
            app:layout_constraintBottom_toBottomOf="@id/image_profile_picture"
            android:background="@drawable/rounded_corners"
            android:backgroundTint="@color/theme_500"
            android:src="@drawable/icon_camera"
            android:tint="@color/white"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="@id/image_profile_bg"
            app:layout_constraintStart_toEndOf="@id/image_profile_picture"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/image_profile_bg"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_profile_picture">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name_default"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/button_profile_name"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/rounded_corners"
                    android:layout_gravity="center"
                    android:src="@drawable/icon_edit"
                    android:tint="@color/white"
                    android:layout_marginStart="10dp"/>

            </androidx.appcompat.widget.LinearLayoutCompat>


            <TextView
                android:id="@+id/profile_tracks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_tracks_default"
                android:gravity="start"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_profile_picture"/>

            <TextView
                android:id="@+id/profile_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/profile_distance_default"
                android:gravity="start"
                android:textColor="@color/text_grey"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/image_profile_picture"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_profile_select"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_profile_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/button_profile_delete"
            android:layout_marginStart="100dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/icon_track"
            android:tint="@color/white"/>

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/button_profile_delete"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/image_profile_bg"
            app:layout_constraintStart_toEndOf="@id/button_profile_select"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="100dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/rounded_corners"
            android:src="@drawable/icon_delete"
            android:tint="@color/white"/>



    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>